force-app/main/default/objects/User_Module__c/User_Module__c.object-meta.xml
<CustomObject>
    <label>User Module</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>User_Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>