force-app/main/default/objects/User_Module__c/fields/Completed_Units__c.field-meta.xml
<CustomField>
    <fullName>Completed_Units__c</fullName>
    <label>Completed Units</label>
    <summaryFilterItems>
        <field>User_Unit__c.Earned_Points__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Unit__c.User_Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>