force-app/main/default/objects/User_Module__c/fields/is_Owner__c.field-meta.xml
<CustomField>
    <fullName>is_Owner__c</fullName>
    <formula>User__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Owner</label>
    <type>Checkbox</type>
</CustomField>